Update network.ini added missing field smtp_from =

--- a/Core/network.ini
+++ b/Core/network.ini
@@ -5,6 +5,7 @@ nick_len = 15
 account_len = 15
 
 smtp_host = localhost
-smtp_port = 25
+smtp_port = 587
 smtp_user = ""
 smtp_pass = ""
+smtp_from = "noreply@ircplanet.net"
